# Bioinfo2_Uebung09

Uebung09/: .Matrix.h.kate-swp  CMakeLists.txt  Matrix.h  Test.cpp  Test.hpp  example.C  getSecStruct.C  getSecStruct.h
Uebung09/tests/: CMakeLists.txt  TestSuite1_tests.cpp  getSecStruct_test.cpp  matrix_test.cpp
preprocessed/: .directory
